versioned_docs/version-2026.1.1/professor/mario_eduardo_de_barros_gomes_e_nunes_da_silva.mdx
---
sidebar_label: 'Mario Eduardo de Barros Gomes e Nunes da Silva'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Mario Eduardo de Barros Gomes e Nunes da Silva",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Introdução à Mecatrônica e Metodologia Científica - 2584",
          "size": 1,
          "teachers": [
            "Mario Eduardo de Barros Gomes e Nunes da Silva"
          ],
          "classroom": "sala_13-2",
          "students": [
            "MEC2026"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Eletricidade Básica - 134",
          "size": 2,
          "teachers": [
            "Mario Eduardo de Barros Gomes e Nunes da Silva"
          ],
          "classroom": "sala_11-2",
          "students": [
            "ELM2026"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Eletricidade e Medidas Elétricas - 2586",
          "size": 2,
          "teachers": [
            "Mario Eduardo de Barros Gomes e Nunes da Silva"
          ],
          "classroom": "laboratorio_de_eletricidade_e_eletronica_b4",
          "students": [
            "MEC2026"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Introdução à Tecnologia em Automação Industrial - 2592",
          "size": 2,
          "teachers": [
            "Mario Eduardo de Barros Gomes e Nunes da Silva"
          ],
          "classroom": "sala_15-2",
          "students": [
            "TAI2026"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Instrumentos e Medidas Elétricas - 2591",
          "size": 2,
          "teachers": [
            "Mario Eduardo de Barros Gomes e Nunes da Silva"
          ],
          "classroom": "sala_15-2",
          "students": [
            "TAI2026"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Eletricidade Básica - 134",
          "size": 2,
          "teachers": [
            "Mario Eduardo de Barros Gomes e Nunes da Silva"
          ],
          "classroom": "laboratorio_de_eletricidade_e_eletronica_b4",
          "students": [
            "ELM2026"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Instrumentos de Medidas Elétricas - 139",
          "size": 2,
          "teachers": [
            "Mario Eduardo de Barros Gomes e Nunes da Silva"
          ],
          "classroom": "laboratorio_de_eletricidade_e_eletronica_b4",
          "students": [
            "ELM2026"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Mario Eduardo de Barros Gomes e Nunes da Silva

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

